[package]
name = "topics"
version = "0.1.0"
edition = "2021"
description = "Abstract interfaces for channel brokering"
readme = "README.md"
authors = ["Carter carterjschultz@gmail.com"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
